[FLINK-15633][build] Fix building Javadocs on JDK 11